# BP-KinectAzure-Loduhova

./: .gitignore  README.md  chest_normal.txt  chest_tough.txt  distances.txt  left_hand_normal.txt  left_hand_tough.txt  right_hand_normal.txt  right_hand_tough.txt
src/kinect_control/: CMakeLists.txt  package.xml
src/kinect_control/include/kinect_control/: helper_function.h  kinect_control.hpp
src/kinect_control/launch/: loduhova.launch.py
src/kinect_control/src/: helper_function.cpp  kinect_control.cpp
